# MetaCode

./: .gitignore  CMakeLists.txt  gen.sh
CodeFromAST/: CMakeLists.txt
CodeFromAST/examples/: codegen_example.cpp
CodeFromAST/include/CodeFromAST/: CLikePrinterVisitor.h  CodeExpander.h  EmptyVisitor.h  InfosGatherVisitor.h  PrinterVisitor.h  PseudoCodePrinterVisitor.h
CodeFromAST/src/: CLikePrinterVisitor.cpp  CodeExpander.cpp  EmptyVisitor.cpp  InfosGatherVisitor.cpp  PrinterVisitor.cpp  PseudoCodePrinterVisitor.cpp
MetaCodeAST/: CMakeLists.txt  MetaCodeAST.h  README.md
MetaCodeAST/examples/: basic_example1.cpp  test.cpp  utils.h
MetaCodeAST/include/: CodeNode.h  Conditional.h  Declaration.h  Expression.h  For.h  Function.h  Main.h  MetaCodeAST.h  Print.h  Variable.h  While.h
MetaCodeAST/include/MetaCodeAST/: AbstractVisitor.h  Bloc.h  CodeNode.h  Conditional.h  Constructions.h  Declaration.h  Expression.h  For.h  Function.h  IncludeLib.h  InterfaceType.h  Main.h  Print.h  Variable.h  While.h  indentation_space.h
MetaCodeAST/include/MetaCodeAST/Expression/: Expression.h
MetaCodeAST/include/MetaCodeAST/Transformers/: AbstractTransformer.h  BasicTransformer.h
MetaCodeAST/include/MetaCodeAST/Type/: Type.h
MetaCodeAST/include/MetaCodeAST/Utilities/: Bloc.h
MetaCodeAST/include/MetaCodeAST/Variable/: Variable.h
MetaCodeAST/include/MetaCodeAST/Visitors/: AbstractVisitor.h  (+2 more)
MetaCodeAST/src/: BasicTransformer.cpp  BasicVisitor.cpp  Bloc.cpp  Conditional.cpp  Declaration.cpp  EmptyVisitor.cpp  Expression.cpp  For.cpp  Function.cpp  IncludeLib.cpp  Main.cpp  Print.cpp  Type.cpp  Variable.cpp  While.cpp  indentation_space.cpp
MetaCodeGen/: CMakeLists.txt
MetaCodeGen/examples/: codegen_test.cpp
MetaCodeGen/include/: MetaCodeGen.h
MetaCodeGen/include/MetaCodeGen/: Bloc.h  Else.h  For.h  If.h  Main.h  Utilities.h  While.h
MetaCodeGen/src/: Bloc.cpp  Utilities.cpp
(+24 files in other folders)
